Alteração entrada de notas
Signed-off-by: Erinaldo Henrique <hencomjesus@hotmail.com>